--- a/SimpleLandingPage/SimpleLandingPage.html
+++ b/SimpleLandingPage/SimpleLandingPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSEdge Landing Page</title>
-    <link rel="stylesheet" href="h.css" />
+    <link rel="stylesheet" href="SimpleLandingPage
+.css" />
   </head>
   <body>
     <!-- Header Section -->
